--- a/src/components/Loading/Loading.css
+++ b/src/components/Loading/Loading.css
@@ -1,3 +1,7 @@
+.loading-main-container{
+  max-width: 500px;
+}
+
 .loading-histogram {
   width: 100%;
   height: 100%;
@@ -52,7 +56,6 @@
 
 .loading-main-container {
   margin: auto;
-  display: grid;
   grid-template-columns: 10fr;
   grid-template-rows: 8fr;
   place-items: center;
