--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -2,31 +2,21 @@
   width: 100%;
   height: 100%;
   display: flex;
-  border: 1px solid;
-  /* border: 1px solid yellow; */
+  border-left: 1px solid #00000084;
+  border-bottom: 1px solid #00000084;
 }
 
 .line {
   background-color: rgb(0, 187, 255);
-  border: 1px solid;
   height: 100%;
   margin-top: auto;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   cursor: pointer;
-
-  /* width: 5vw; // 540 screen */
-  /* width: 2vw; // 280px screen */
-  /* width: 4vw; // 375 screen */
+  height: 0;
+  transition: all 1s;
   width: 5vw;
   margin-left: 1rem;
-}
-
-.line:nth-child(2) {
-  height: 50%;
-}
-.line:nth-child(7) {
-  height: 70%;
 }
 
 .line span {
