--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -7,7 +7,7 @@
 }
 
 .line {
-  background-color: rgb(0, 187, 255);
+  /* background-color: rgb(0, 187, 255); */
   height: 100%;
   margin-top: auto;
   border-top-left-radius: 5px;
