--- a/src/index.css
+++ b/src/index.css
@@ -5,18 +5,8 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Be Vietnam Pro", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-#root {
-  max-width: 1800px;
-}
-
-@media screen and (min-width: 1800px) {
-  body {
-    max-width: 1800px;
-    margin: 0 auto;
-  }
+  overflow: hidden;
 }
