--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -7,7 +7,6 @@
 }
 
 .line {
-  /* background-color: rgb(0, 187, 255); */
   height: 100%;
   margin-top: auto;
   border-top-left-radius: 5px;
@@ -15,7 +14,7 @@
   cursor: pointer;
   height: 0;
   transition: all 1s;
-  width: 100%;
+  width: 5vw;
   margin-left: 1rem;
 }
 
